--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: c
 
+cache: ccache
+
 sudo: required
 
 addons:
@@ -45,6 +47,14 @@ matrix:
         - os: linux
           compiler: gcc
           env: CUDA=8.0.61-1
+        - os: osx
+          osx_image: xcode8.2
+          compiler: clang
+          env: FEATURES="--enable-memcached"
+        - os: osx
+          osx_image: xcode9
+          compiler: clang
+          env: FEATURES="--enable-memcached"
 
     exclude:
         - os: osx
@@ -52,6 +62,10 @@ matrix:
 
 before_install:
     - source ./.travis/install_cuda.sh
+    # OSX dependencies
+    - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew update; fi
+    - if [ "$TRAVIS_OS_NAME" = "osx" ]; then brew install libmemcached; fi
+
 
 script:
     - ./autogen.sh
