--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,7 @@ before_install:
 
 script:
     - ./autogen.sh
-    - ./configure $HOST $FEATURES
+    - ./configure --prefix $(pwd)/build $HOST $FEATURES
     - make
     - make ${TEST:-test}
 env:
