--- a/Makefile.in
+++ b/Makefile.in
@@ -160,6 +160,26 @@ installcheck: $(EXEC)$(EXEEXT) unittest/run$(EXEEXT)
 .c.o:
 	$(CC) $(all_cppflags) $(all_cflags) -c -o $@ $<
 
+define plist
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+    <key>CFBundleExecutable</key>
+    <string>EXEC</string>
+    <key>CFBundleIdentifier</key>
+    <string>org.samba.EXEC</string>
+    <key>CFBundleInfoDictionaryVersion</key>
+    <string>6.0</string>
+    <key>CFBundleName</key>
+    <string>EXEC</string>
+    <key>CFBundlePackageType</key>
+    <string>APPL</string>
+</dict>
+</plist>
+endef
+export plist
+
 .PHONY: package
 package:
 	@echo
@@ -168,8 +188,7 @@ ifeq ($(UNAME_S),Darwin)
 	@rm -rf "bundle/$(EXEC).app"
 	@rm -rf "bundle/$(EXEC).dmg"
 	@mkdir -p "bundle/$(EXEC).app"/Contents/{MacOS,Resources,Frameworks}
-	@cp Info.plist "bundle/$(EXEC).app/Contents/"
-	@sed -i '.bak' s/EXEC/$(EXEC)/g "bundle/$(EXEC).app/Contents/Info.plist"
+	@echo $$plist > "bundle/$(EXEC).app"/Contents/Info.plist
 	@cp `otool -L "$(EXEC)" | grep -v "\/usr\/lib" | grep "\/" | awk '{print $$1,"bundle/$(EXEC).app/Contents/Frameworks"}'`
 	@install_name_tool -change `otool -L $(EXEC) | grep -v "\/usr\/lib" | grep "\/" | awk '{print $$1; gsub(/^.*\//,"",$$1); print "@executable_path/../Frameworks/"$$1}'` $(EXEC)
 	@cp $(EXEC) "bundle/$(EXEC).app/Contents/MacOS/$(EXEC)"
