--- a/Makefile.in
+++ b/Makefile.in
@@ -186,16 +186,15 @@ package: install
 	@echo
 ifeq ($(UNAME_S),Darwin)
 	@echo Building app bundle
-	@rm -rf "bundle/$(EXEC).app"
-	@rm -rf "bundle/$(EXEC).dmg"
+	@rm -rf "bundle/"
 	@mkdir -p "bundle/$(EXEC).app"/Contents/{MacOS,Resources,Frameworks}
 	@echo $$plist > "bundle/$(EXEC).app"/Contents/Info.plist
-	@cp `otool -L "$(EXEC)" | grep -v "\/usr\/lib" | grep "\/" | awk '{print $$1,"bundle/$(EXEC).app/Contents/Frameworks"}'`
-	@install_name_tool -change `otool -L $(EXEC) | grep -v "\/usr\/lib" | grep "\/" | awk '{print $$1; gsub(/^.*\//,"",$$1); print "@executable_path/../Frameworks/"$$1}'` $(EXEC)
 	@cp $(EXEC) "bundle/$(EXEC).app/Contents/MacOS/$(EXEC)"
-	@echo
+	@cp `otool -L "bundle/$(EXEC).app/Contents/MacOS/$(EXEC)" | grep -v "\/usr\/lib" | grep -v "\:" | awk '{print $$1,"bundle/$(EXEC).app/Contents/Frameworks"}'`
+	@install_name_tool -change `otool -L "bundle/$(EXEC).app/Contents/MacOS/$(EXEC)" | grep -v "\/usr\/lib" | grep -v "\:" | awk '{print $$1; gsub(/^.*\//,"",$$1); print "@executable_path/../Frameworks/"$$1}'` "bundle/$(EXEC).app/Contents/MacOS/$(EXEC)"
+	$(eval VERSION := $(shell ./$(EXEC) -V | grep 'ccache version' | awk '{ print $$3 }'))
 	@echo Creating Disk Image
-	@hdiutil create "bundle/$(EXEC).dmg" -volname "ccache" -srcfolder "bundle/$(EXEC).app"
+	@hdiutil create "bundle/$(EXEC)-$(VERSION).dmg" -volname "ccache" -srcfolder "bundle/$(EXEC).app"
 endif
 
 @include_dev_mk@
