added missing user

--- a/.travis.yml
+++ b/.travis.yml
@@ -80,6 +80,7 @@ deploy:
     branch: feature/macosdistribution
     tags: true
   provider: bintray
+  user: "wotd"
   file: "ccache.dmg"
   repo: "wotd/v"
   name: "ccache.dmg"
