--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,7 @@ script:
 - make package
 before_deploy:
 - if [ "$TRAVIS_OS_NAME" = "osx" ]; then export FILE_TO_UPLOAD="$(TRAVIS_BUILD_DIR)/bundle/ccache.dmg+$(TRAVIS_TAG)"; fi
-- ls $(TRAVIS_BUILD_DIR)/bundle
+- ls "$TRAVIS_BUILD_DIR/bundle"
 deploy:
   provider: releases
   api_key:
