--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ script:
 - make ${TEST:-test}
 - make package
 before_deploy:
-- if [ "$TRAVIS_OS_NAME" = "osx" ]; then ls "$TRAVIS_BUILD_DIR/bundle" && export FILE_TO_UPLOAD="$TRAVIS_BUILD_DIR/bundle/ccache+$TRAVIS_TAG.dmg" && echo "$FILE_TO_UPLOAD"; fi
+- if [ "$TRAVIS_OS_NAME" = "osx" ]; then ls "$TRAVIS_BUILD_DIR/bundle" && export FILE_TO_UPLOAD="$TRAVIS_BUILD_DIR/bundle/ccache-$TRAVIS_TAG.dmg" && echo "$FILE_TO_UPLOAD"; fi
 deploy:
   provider: releases
   api_key:
@@ -82,7 +82,8 @@ deploy:
     branch: feature/macosdistribution
     tags: true
   provider: bintray
-  file: $FILE_TO_UPLOAD
+  file_glob: true
+  file: "$TRAVIS_BUILD_DIR/bundle/*"
   user: "wotd"
   repo: "wotd/v"
   dry_run: true
