--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ script:
 - make ${TEST:-test}
 - make package
 before_deploy:
-- if [ "$TRAVIS_OS_NAME" = "osx" ]; then ls "$TRAVIS_BUILD_DIR/bundle" && export FILE_TO_UPLOAD="$TRAVIS_BUILD_DIR/bundle/ccache-$TRAVIS_TAG.dmg" && echo "$FILE_TO_UPLOAD"; fi
+- if [ "$TRAVIS_OS_NAME" = "osx" ]; then ls "$TRAVIS_BUILD_DIR/bundle" && export FILE_TO_UPLOAD="$(ls $TRAVIS_BUILD_DIR/bundle/*dmg)" && echo "$FILE_TO_UPLOAD"; fi
 - echo $TRAVIS_BUILD_ID
 - echo $TRAVIS_BUILD_NUMBER
 - echo $TRAVIS_JOB_ID
