--- a/.travis.yml
+++ b/.travis.yml
@@ -68,8 +68,8 @@ script:
 - make ${TEST:-test}
 - make package
 before_deploy:
-- if [ "$TRAVIS_OS_NAME" = "osx" ]; then ls "$TRAVIS_BUILD_DIR/bundle" && export FILE_TO_UPLOAD="$(ls $TRAVIS_BUILD_DIR/bundle/*dmg)" && echo "$FILE_TO_UPLOAD"; fi
-- if [ "$TRAVIS_OS_NAME" = "linux" ]; then ls "$TRAVIS_BUILD_DIR" && FILE_TO_UPLOAD="TRAVIS_BUILD_DIR/*"; fi 
+- if [ "$TRAVIS_OS_NAME" = "osx" ]; then export FILE_TO_UPLOAD="$(ls $TRAVIS_BUILD_DIR/bundle/*dmg)"; fi
+- if [ "$TRAVIS_OS_NAME" = "linux" ]; then FILE_TO_UPLOAD="TRAVIS_BUILD_DIR/ccache"; fi 
 deploy:
   provider: releases
   api_key:
