--- a/.travis.yml
+++ b/.travis.yml
@@ -37,10 +37,12 @@ env:
 matrix:
     include:
         - os: linux
-          compiler: 
-            - gcc
-            - clang
+          compiler: gcc
           sudo: required
+          dist: trusty
+          env: FEATURES="--enable-memcached"
+        - os: linux
+          compiler: clang
           dist: trusty
           env: FEATURES="--enable-memcached"
         - os: osx
