--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,7 @@ before_deploy:
   
 deploy:
   provider: bintray
-  file: "$FILE_TO_UPLOAD"
+  file: "descriptor.json"
   user: "wotd"
   repo: "v"
   skip_cleanup: true
